--- a/index.html
+++ b/index.html
@@ -81,6 +81,176 @@
           </button>
         </form>
       </section>
+      <section class="dishes-section">
+        <img class="tomatoes-png" src="./images/tomatoes-png.png" alt="" />
+        <img class="perets-png" src="./images/perets-png.png" alt="" />
+        <div class="dishes-section__wrapper">
+          <h2 class="dishes-section__title">Our special Dishes</h2>
+          <div class="dishes-section__container">
+            <!-- <button
+            class="dishes-section__button slide-button prev"
+            type="button"
+          ></button> -->
+            <div>
+              <ul class="dishes-list">
+                <li class="dishes-item">
+                  <article class="dishes-card">
+                    <img
+                      class="dishes-card__image"
+                      src="./images/fresh-pancakes.jpg"
+                      alt="fresh-pancakes"
+                    />
+                    <div class="dishes-card__wrapper">
+                      <h3 class="dishes-card__title">Fresh Pancakes</h3>
+                      <p class="dishes-card__price-text">Rs. 219</p>
+                      <div class="dishes-card__container">
+                        <div class="dishes-card__pointer-text">
+                          <svg
+                            class="dishes-card__icon-nav-pointer"
+                            width="18"
+                            height="25"
+                          >
+                            <use href="./images/sprite.svg#icon-Vector"></use>
+                          </svg>
+                          <p>Coolz cafe, Street2</p>
+                        </div>
+                        <div class="dishes-card__calories-text">
+                          <p>60 calories</p>
+                          <p>4.9</p>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </li>
+                <li class="dishes-item">
+                  <article class="dishes-card">
+                    <img
+                      class="dishes-card__image"
+                      src="./images/salad.jpg"
+                      alt="fresh-and-healthy-salad"
+                    />
+                    <div class="dishes-card__wrapper">
+                      <h3 class="dishes-card__title">
+                        Fresh and Healthy Salad
+                      </h3>
+                      <p class="dishes-card__price-text">Rs. 129</p>
+                      <div class="dishes-card__container">
+                        <div class="dishes-card__pointer-text">
+                          <svg
+                            class="dishes-card__icon-nav-pointer"
+                            width="18"
+                            height="25"
+                          >
+                            <use href="./images/sprite.svg#icon-Vector"></use>
+                          </svg>
+                          <p>Indira market</p>
+                        </div>
+                        <div class="dishes-card__calories-text">
+                          <p>50 calories</p>
+                          <p>4.5</p>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </li>
+                <li class="dishes-item">
+                  <article class="dishes-card">
+                    <img
+                      class="dishes-card__image"
+                      src="./images/mexican-pizza.jpg"
+                      alt="mexican-pizza"
+                    />
+                    <div class="dishes-card__wrapper">
+                      <h3 class="dishes-card__title">Mexican Pizza</h3>
+                      <p class="dishes-card__price-text">Rs. 249</p>
+                      <div class="dishes-card__container">
+                        <div class="dishes-card__pointer-text">
+                          <svg
+                            class="dishes-card__icon-nav-pointer"
+                            width="18"
+                            height="25"
+                          >
+                            <use href="./images/sprite.svg#icon-Vector"></use>
+                          </svg>
+                          <p>Treasure Mall</p>
+                        </div>
+                        <div class="dishes-card__calories-text">
+                          <p>70 calories</p>
+                          <p>4.5</p>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </li>
+                <!-- <li class="dishes-item">
+                  <article class="dishes-card">
+                    <img
+                      class="dishes-card__image"
+                      src="./images/fresh-pancakes.jpg"
+                      alt="fresh-pancakes"
+                    />
+                    <div class="dishes-card__wrapper">
+                      <h3 class="dishes-card__title">Fresh Pancakes</h3>
+                      <p class="dishes-card__price-text">Rs. 219</p>
+                      <div class="dishes-card__container">
+                        <div class="dishes-card__pointer-text">
+                          <svg
+                            class="dishes-card__icon-nav-pointer"
+                            width="18"
+                            height="25"
+                          >
+                            <use href="./images/sprite.svg#icon-Vector"></use>
+                          </svg>
+                          <p>Coolz cafe, Street2</p>
+                        </div>
+                        <div class="dishes-card__calories-text">
+                          <p>60 calories</p>
+                          <p>4.9</p>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </li>
+                <li class="dishes-item">
+                  <article class="dishes-card">
+                    <img
+                      class="dishes-card__image"
+                      src="./images/salad.jpg"
+                      alt="fresh-and-healthy-salad"
+                    />
+                    <div class="dishes-card__wrapper">
+                      <h3 class="dishes-card__title">
+                        Fresh and Healthy Salad
+                      </h3>
+                      <p class="dishes-card__price-text">Rs. 129</p>
+                      <div class="dishes-card__container">
+                        <div class="dishes-card__pointer-text">
+                          <svg
+                            class="dishes-card__icon-nav-pointer"
+                            width="18"
+                            height="25"
+                          >
+                            <use href="./images/sprite.svg#icon-Vector"></use>
+                          </svg>
+                          <p>Indira market</p>
+                        </div>
+                        <div class="dishes-card__calories-text">
+                          <p>50 calories</p>
+                          <p>4.5</p>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </li> -->
+                <!-- <button
+              class="dishes-section__button slide-button next"
+              type="button"
+            ></button> -->
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
