fix-position-icons

--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                       <div class="dishes-card__container">
                         <div class="dishes-card__pointer-text">
                           <svg
-                            class="dishes-card__icon-nav-pointer"
+                            class="dishes-card__icon-nav-pointer""
                             width="18"
                             height="25"
                           >
-                            <use href="./images/sprite.svg#icon-Vector"></use>
+                            <use class="dishes-card__icon-Vector" href="./images/sprite.svg#icon-Vector"></use>
                           </svg>
                           <p>Indira market</p>
                         </div>
@@ -182,66 +182,6 @@
                     </div>
                   </article>
                 </li>
-                <!-- <li class="dishes-item">
-                  <article class="dishes-card">
-                    <img
-                      class="dishes-card__image"
-                      src="./images/fresh-pancakes.jpg"
-                      alt="fresh-pancakes"
-                    />
-                    <div class="dishes-card__wrapper">
-                      <h3 class="dishes-card__title">Fresh Pancakes</h3>
-                      <p class="dishes-card__price-text">Rs. 219</p>
-                      <div class="dishes-card__container">
-                        <div class="dishes-card__pointer-text">
-                          <svg
-                            class="dishes-card__icon-nav-pointer"
-                            width="18"
-                            height="25"
-                          >
-                            <use href="./images/sprite.svg#icon-Vector"></use>
-                          </svg>
-                          <p>Coolz cafe, Street2</p>
-                        </div>
-                        <div class="dishes-card__calories-text">
-                          <p>60 calories</p>
-                          <p>4.9</p>
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-                </li>
-                <li class="dishes-item">
-                  <article class="dishes-card">
-                    <img
-                      class="dishes-card__image"
-                      src="./images/salad.jpg"
-                      alt="fresh-and-healthy-salad"
-                    />
-                    <div class="dishes-card__wrapper">
-                      <h3 class="dishes-card__title">
-                        Fresh and Healthy Salad
-                      </h3>
-                      <p class="dishes-card__price-text">Rs. 129</p>
-                      <div class="dishes-card__container">
-                        <div class="dishes-card__pointer-text">
-                          <svg
-                            class="dishes-card__icon-nav-pointer"
-                            width="18"
-                            height="25"
-                          >
-                            <use href="./images/sprite.svg#icon-Vector"></use>
-                          </svg>
-                          <p>Indira market</p>
-                        </div>
-                        <div class="dishes-card__calories-text">
-                          <p>50 calories</p>
-                          <p>4.5</p>
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-                </li> -->
                 <!-- <button
               class="dishes-section__button slide-button next"
               type="button"
