--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Playfair+Display:wght@700&family=Poppins:wght@500&family=Suez+One&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <title>Bread</title>
   </head>
   <body>
@@ -87,14 +91,25 @@
         <div class="dishes-section__wrapper">
           <h2 class="dishes-section__title">Our special Dishes</h2>
           <div class="dishes-section__container">
-            <!-- <button
-            class="dishes-section__button slide-button prev"
-            type="button"
-          ></button> -->
+            <button class="slide-button-prev" type="button">
+              <svg class="button-slider-prev" width="60" height="60">
+                <use href="./images/sprite.svg#icon-left-arrow"></use>
+              </svg>
+            </button>
             <div>
               <ul class="dishes-list">
                 <li class="dishes-item">
                   <article class="dishes-card">
+                    <img
+                      class="dishes-card-icon"
+                      src="./images/dishes-card-icon.svg"
+                      alt="fresh-pancakes"
+                    />
+                    <img
+                      class="dishes-card-heart-icon"
+                      src="./images/fill-heart.svg"
+                      alt=""
+                    />
                     <img
                       class="dishes-card__image"
                       src="./images/fresh-pancakes.jpg"
@@ -116,7 +131,12 @@
                         </div>
                         <div class="dishes-card__calories-text">
                           <p>60 calories</p>
-                          <p>4.9</p>
+                          <p style="display: inline">4.9</p>
+                          <img
+                            class="dishes-card__star"
+                            src="./images/Star-5.svg"
+                            alt=""
+                          />
                         </div>
                       </div>
                     </div>
@@ -124,6 +144,16 @@
                 </li>
                 <li class="dishes-item">
                   <article class="dishes-card">
+                    <img
+                      class="dishes-card-icon"
+                      src="./images/dishes-card-icon.svg"
+                      alt="fresh-pancakes"
+                    />
+                    <img
+                      class="dishes-card-heart-icon"
+                      src="./images/empty-heart.svg"
+                      alt=""
+                    />
                     <img
                       class="dishes-card__image"
                       src="./images/salad.jpg"
@@ -137,17 +167,25 @@
                       <div class="dishes-card__container">
                         <div class="dishes-card__pointer-text">
                           <svg
-                            class="dishes-card__icon-nav-pointer""
+                            class="dishes-card__icon-nav-pointer"
                             width="18"
                             height="25"
                           >
-                            <use class="dishes-card__icon-Vector" href="./images/sprite.svg#icon-Vector"></use>
+                            <use
+                              class="dishes-card__icon-Vector"
+                              href="./images/sprite.svg#icon-Vector"
+                            ></use>
                           </svg>
                           <p>Indira market</p>
                         </div>
                         <div class="dishes-card__calories-text">
                           <p>50 calories</p>
-                          <p>4.5</p>
+                          <p style="display: inline">4.5</p>
+                          <img
+                            class="dishes-card__star"
+                            src="./images/Star-5.svg"
+                            alt=""
+                          />
                         </div>
                       </div>
                     </div>
@@ -155,6 +193,16 @@
                 </li>
                 <li class="dishes-item">
                   <article class="dishes-card">
+                    <img
+                      class="dishes-card-icon"
+                      src="./images/dishes-card-icon.svg"
+                      alt="fresh-pancakes"
+                    />
+                    <img
+                      class="dishes-card-heart-icon"
+                      src="./images/fill-heart.svg"
+                      alt=""
+                    />
                     <img
                       class="dishes-card__image"
                       src="./images/mexican-pizza.jpg"
@@ -176,18 +224,24 @@
                         </div>
                         <div class="dishes-card__calories-text">
                           <p>70 calories</p>
-                          <p>4.5</p>
+                          <p style="display: inline">4.5</p>
+                          <img
+                            class="dishes-card__star"
+                            src="./images/Star-5.svg"
+                            alt=""
+                          />
                         </div>
                       </div>
                     </div>
                   </article>
                 </li>
-                <!-- <button
-              class="dishes-section__button slide-button next"
-              type="button"
-            ></button> -->
               </ul>
             </div>
+            <button class="slide-button-prev" type="button">
+              <svg class="button-slider-next" width="60" height="60">
+                <use href="./images/sprite.svg#icon-right-arrow"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
