add-order-section

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
               </svg>
             </div>
           </div>
-          <button class="slide-button-next" type="button">
-            <svg class="slide-button-next__arrow" width="12" height="22">
+          <button class="slide-next" type="button">
+            <svg class="slide-next__arrow" width="12" height="22">
               <use href="./images/sprite.svg#icon-Nav-arrow"></use>
             </svg>
           </button>
@@ -88,6 +88,8 @@
       <section class="dishes-section">
         <img class="tomatoes-png" src="./images/tomatoes-png.png" alt="" />
         <img class="perets-png" src="./images/perets-png.png" alt="" />
+        <img class="lemon-png" src="./images/lemon-png.png" alt="" />
+        <img class="list-png" src="./images/Png_header_list.png" alt="" />
         <div class="dishes-section__wrapper">
           <h2 class="dishes-section__title">Our special Dishes</h2>
           <div class="dishes-section__container">
@@ -243,6 +245,38 @@
               </svg>
             </button>
           </div>
+        </div>
+      </section>
+      <section class="order-section">
+        <div class="order-section__container">
+          <h2 class="order-section__title">
+            Hi Foodie, What’s your next order?
+          </h2>
+          <ul class="order-section__list">
+            <li class="order-section__item">
+              <article class="order-card">
+                <img src="./images/breakfast-img.png" alt="" />
+                <h3>Breakfast</h3>
+              </article>
+            </li>
+            <li class="order-section__item">
+              <article class="order-card">
+                <img src="./images/lunch-img.png" alt="" />
+                <h3>Lunch</h3>
+              </article>
+            </li>
+            <li class="order-section__item">
+              <article class="order-card">
+                <img src="./images/dinner-img.png" alt="" />
+                <h3>Dinner</h3>
+              </article>
+            </li>
+            <button class="order-section__button" type="button">
+              <svg class="order-section__arrow" width="" height="">
+                <use href="./images/sprite.svg#icon-Nav-arrow"></use>
+              </svg>
+            </button>
+          </ul>
         </div>
       </section>
     </main>
