fix-bugs-add-new-content

--- a/index.html
+++ b/index.html
@@ -279,6 +279,53 @@
           </ul>
         </div>
       </section>
+      <section class="deals-section">
+        <div class="deals-container">
+          <img class="tomatoes-2-png" src="./images/tomat2-png.png" alt="" />
+          <h2 class="deals-section__title">Super saving Offers!</h2>
+          <button class="deals-section__button">Explore our Deals</button>
+          <div class="deals-section__wrapper">
+            <ul class="deals-list">
+              <li class="deals-item">
+                <article class="deals-card">
+                  <img
+                    class="deals-card-img"
+                    src="./images/meal-coupon-img.jpg"
+                    alt=""
+                  />
+                  <div class="deals-card__wrapper">
+                    <h3 class="deals-card__title">Get deals upto</h3>
+                    <p><strong>50%</strong></p>
+                    <p>with every meal.</p>
+                    <p>Use Coupon Code: <strong>FIRST50</strong></p>
+                  </div>
+                </article>
+              </li>
+              <li class="deals-item">
+                <article class="deals-card">
+                  <img
+                    class="deals-card-img"
+                    src="./images/dessert-coupon-img.jpg"
+                    alt=""
+                  />
+                  <div class="deals-card__wrapper">
+                    <h3 class="deals-card__title">Get deals upto</h3>
+                    <p><strong>80%</strong></p>
+                    <p>with every dessert.</p>
+                    <p>Use Coupon Code: <strong>DESS80</strong></p>
+                  </div>
+                </article>
+              </li>
+              <button class="deals-section__arrow" type="button">
+                View all
+                <svg class="deals-card__arrow" width="" height="">
+                  <use href="./images/sprite.svg#icon-Nav-arrow"></use>
+                </svg>
+              </button>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
