--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         </div>
       </section>
       <section class="deals-section">
-        <div class="deals-container">
+        <div class="deals-section__container">
           <img class="tomatoes-2-png" src="./images/tomat2-png.png" alt="" />
           <h2 class="deals-section__title">Super saving Offers!</h2>
           <button class="deals-section__button">Explore our Deals</button>
@@ -324,6 +324,72 @@
               </button>
             </ul>
           </div>
+        </div>
+      </section>
+      <section class="recommendation-section">
+        <div class="recommendation-container">
+          <h2 class="recommendation-section__title">
+            Recommendations for you>
+          </h2>
+          <ul class="recommendation-section__list">
+            <li class="recommendation-section__item">
+              <article class="recommendation__card">
+                <img class="card__img" src="./images/kfc-img.jpg" alt="" />
+                <div class="card__text-container">
+                  <div class="card__text">
+                    <h3>KFC</h3>
+                  </div>
+                  <div class="card__text-2">
+                    <p>45 mins</p>
+                  </div>
+                </div>
+              </article>
+            </li>
+            <li class="recommendation-section__item">
+              <article class="recommendation__card">
+                <img class="card__img" src="./images/bk-img.jpg" alt="" />
+                <div class="card__text-container">
+                  <div class="card__text">
+                    <h3>Burger King</h3>
+                  </div>
+                  <div class="card__text-2">
+                    <p>55 mins</p>
+                  </div>
+                </div>
+              </article>
+            </li>
+            <li class="recommendation-section__item">
+              <article class="recommendation__card">
+                <img class="card__img" src="./images/ph-img.jpg" alt="" />
+                <div class="card__text-container">
+                  <div class="card__text">
+                    <h3>Pizza Hut</h3>
+                  </div>
+                  <div class="card__text-2">
+                    <p>35 mins</p>
+                  </div>
+                </div>
+              </article>
+            </li>
+            <li class="recommendation-section__item">
+              <article class="recommendation__card">
+                <img class="card__img" src="./images/subway-img.png" alt="" />
+                <div class="card__text-container">
+                  <div class="card__text">
+                    <h3>Subway</h3>
+                  </div>
+                  <div class="card__text-2">
+                    <p>50 mins</p>
+                  </div>
+                </div>
+              </article>
+            </li>
+            <button class="recommendation-section__button" type="button">
+              <svg class="recommendation-section__arrow" width="" height="">
+                <use href="./images/sprite.svg#icon-Nav-arrow"></use>
+              </svg>
+            </button>
+          </ul>
         </div>
       </section>
     </main>
