--- a/index.html
+++ b/index.html
@@ -392,6 +392,30 @@
           </ul>
         </div>
       </section>
+      <section class="services-section">
+        <!-- <img src="./images/Line-1.svg" alt="" />
+        <img src="./images/Line-1.svg" alt="" />
+        <img src="./images/tomatoes-3.png" alt="" />
+        <img src="./images/chef-holding-vegetables-img.png" alt="" />
+        <img src="./images/chef-bg-img.svg" alt="" /> -->
+        <div class="services-section__container-1">
+          <h2 class="container-1__title">Our Services</h2>
+          <p>
+            we pride ourselves on our exceptional customer service. Our staff is
+            trained to provide attentive and personalized service, ensuring that
+            every guest has a memorable dining experience. We also offer
+            catering services for events of all sizes, from intimate gatherings
+            to large corporate functions. Our team will work closely with you to
+            create a customized menu that meets your specific needs and exceeds
+            your expectations.
+          </p>
+        </div>
+        <div class="services-section__container-2">
+          <p>Download Hungrezy App for big deals and better experience</p>
+          <img src="./images/google-stores.jpg" alt="" />
+        </div>
+      </section>
+      <section class="reviews-section"></section>
     </main>
   </body>
 </html>
